# mqtt-inspector

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml  release.yml
.tx/: config
data/: se.danielnylander.mqtt-inspector.desktop
data/man/: mqtt-inspector.1
po/: README.md  mqtt-inspector.pot  sv.po
src/mqtt_inspector/: __main__.py  main.py
