[project]
name = "mqtt-inspector"
version = "0.2.0"
description = "MQTT message inspector for IoT"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.0",
    "PyGObject>=3.42",
]

[project.gui-scripts]
mqtt-inspector = "mqtt_inspector.main:main"
